fixing z-index of nav section titles

--- a/styles/pages/Lessons/lessons.scss
+++ b/styles/pages/Lessons/lessons.scss
@@ -321,6 +321,10 @@ $toolTipColor: #f0f4ff;
   }
 }
 
+.iframeContainer{
+  // height: 1100px !important;
+}
+
 // teachIt section
 .downloadTipIcon{
   // height: 70%;
